# Good-MITM

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  READEME_en.md  README.md  README_zh.md  pyproject.toml  rust-toolchain
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build-docker-image.yml  build-release.yml  build-test.yml  build.yml  codeql.yml  maturin.yml
assets/: bb.html
assets/body/: ddrk.html
assets/ca/: cert.crt  private.key
assets/rules/: ads.yaml  demo.yaml  youtube.yaml
core/: Cargo.toml
core/src/: ca.rs  cache.rs  handler.rs  http_client.rs  lib.rs  mitm.rs
core/src/rule/: mod.rs
core/src/rule/action/: log.rs  mod.rs  modify.rs
crates/core/: Cargo.toml
crates/core/src/: ca.rs  error.rs  handler.rs  http_client.rs  lib.rs  mitm.rs  sni_reader.rs
crates/rule/: Cargo.toml
crates/rule/src/: filter.rs  handler.rs  lib.rs
crates/rule/src/action/: mod.rs  modify.rs
crates/trust_cert/: Cargo.toml
crates/trust_cert/src/: lib.rs  linux.rs  windows.rs
docs/: CNAME  README.md  _sidebar.md  index.html  others.md
docs/guide/: 0_cert.md  1_rule.md  2_proxy.md  README.md  transparent_proxy.md
docs/rule/: README.md  action.md  filter.md  modify.md
examples/: gen_ca.rs
http_mitm/: Cargo.toml  LICENSE  README.md
http_mitm/src/: ca.rs  decoder.rs  lib.rs  noop.rs  proxy.rs
rules/: ads.yaml  bili.yaml  demo.yaml  dxx.yaml  js.yaml  log.yaml  map_modify.yaml  netflix.yaml  rule_chain.yaml  text_modify.yaml  youtube.yaml  yuanshen.yaml  yxbj.yaml
src/: action.rs  ca.rs  error.rs  lib.rs  main.rs
src/action/: mod.rs  modify.rs
src/ca/: gen.rs  mod.rs  root.rs
src/deno/: mod.rs
src/file/: frule.rs  mod.rs  rule.rs  single_multi.rs
src/filter/: mod.rs
src/handler/: message.rs  mitm.rs  mitm_filter.rs  mod.rs
src/mitm/: ca.rs  decoder.rs  error.rs  mod.rs  proxy.rs  readme.txt  rewind.rs
src/rule/: file.rs  js.rs  mod.rs
src/rule/action/: js.rs  log.rs  mod.rs  modify.rs
src/rule/filter/: mitm_filter.rs  mod.rs
src/utils/: cache.rs  mod.rs  single_multi.rs
