[package]
name = "good-mitm"
version = "0.3.6"
authors = ["zu1k <i@zu1k.com>"]
edition = "2021"
description = "Use MITM technology to provide features like rewrite, redirect."
readme = "README.md"
homepage = "https://github.com/zu1k/good-mitm"
repository = "https://github.com/zu1k/good-mitm"
license = "MIT"
keywords = ["proxy", "MITM"]
exclude = [".github/", "docs/", "rules/"]

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
core = { path = "./core", package = "good-mitm-core" }
thiserror = "1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hyper-proxy = { version = "0.9", default-features = false }
rustls-pemfile = "1.0"
tokio = { version = "1", features = ["rt", "signal"] }
rustls = "0.20"
trust_cert = { path = "crates/trust_cert" }


[workspace]
members = [
    "core",
    "crates/trust_cert"
]
