[package]
name = "good-mitm"
version = "0.4.1"
authors = ["zu1k <i@zu1k.com>"]
edition = "2021"
description = "Good Man in the Middle: Use MITM technology to provide features like rewrite, redirect."
readme = "README.md"
homepage = "https://github.com/zu1k/good-mitm"
repository = "https://github.com/zu1k/good-mitm"
license = "MIT"
keywords = ["proxy", "MITM"]
exclude = [".github/", "docs/", "rules/"]

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
mitm-core = { path = "crates/core", package = "good-mitm-core" }
rule = { path = "crates/rule", package = "good-mitm-rule" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hyper-proxy = { version = "0.9", default-features = false }
rustls-pemfile = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
rustls = "0.21"
trust_cert = { path = "crates/trust_cert", optional = true }

[features]
default = []
trust-cert = ["dep:trust_cert"]
js = ["rule/js"]

[workspace]
members = [
    "crates/core",
    "crates/rule",
    "crates/trust_cert"
]
