[package]
name = "good-mitm-core"
version = "0.1.2"
edition = "2021"
description = "Use MITM technology to provide features like rewrite, redirect."
homepage = "https://github.com/zu1k/good-mitm"
repository = "https://github.com/zu1k/good-mitm"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytes = { version = "1", features = ["serde"] }
cached = "0.39"
cfg-if = "1"
cookie = "0.16"
fancy-regex = "0.10"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "server", "stream", "tcp"]  }
hyper-proxy = { version = "0.9", default-features = false }
hyper-rustls = { version = "0.23" }
hyper-tls = { version = "0.5", optional = true }
log = "0.4"
moka = { version = "0.9", features = ["future"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
rcgen = { version = "0.9", features = ["x509-parser"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
time = "0.3"
typed-builder = "0.10"
tokio = { version = "1", features = ["rt"] }
tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
tokio-util = { version = "0.7", features = ["io"] }
wildmatch = "2.1"
quick-js = { version = "0.4", features = ["log"] }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rand = "0.8.5"

[features]
default = ["h2", "request-native-tls"]
request-native-tls = ["hyper-tls", "openssl"]
h2 = ["hyper-rustls/http2"]
