[package]
name = "http_mitm"
version = "0.0.1"
edition = "2018"

[dependencies]
async-compression = { version = "0.3", features = ["tokio", "brotli", "gzip", "zlib", "zstd"] }
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
hyper-proxy = { version = "0.9", default-features = false, features = ["rustls-webpki"] }
hyper-rustls = { version = "0.22", features = ["webpki-tokio"] }
hyper-tungstenite = "0.4"
log = "0.4"
moka = { version = "0.6", features = ["future"] }
rcgen = { version = "0.8", features = ["x509-parser"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
tokio-util = { version = "0.6", features = ["io"] }
