[package]
name = "good-mitm-rule"
version = "0.2.0"
edition = "2021"
description = "Use MITM technology to provide features like rewrite, redirect."
homepage = "https://github.com/zu1k/good-mitm"
repository = "https://github.com/zu1k/good-mitm"
license = "MIT"

[dependencies]
mitm-core = { path = "../core", package = "good-mitm-core" }
# mitm-core = { version = "0.2", package = "good-mitm-core" }

anyhow = "1.0"
async-trait = "0.1"
cached = "0.39"
cookie = "0.16"
fancy-regex = "0.10"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "server", "stream", "tcp"]  }
log = "0.4"
quick-js = { version = "0.4", features = ["log"], optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
js = ["quick-js"]
