[package]
name = "trust_cert"
version = "0.0.4"
edition = "2021"
description = "Install certificate to your system trust zone."
homepage = "https://github.com/zu1k/good-mitm"
repository = "https://github.com/zu1k/good-mitm"
license = "MIT"

[dependencies]
rcgen = { version = "0.9", features = ["x509-parser"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25", default-features = false, features = ["user"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
